--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
          .manrope-font {
         font-family: "Manrope", serif;
         font-optical-sizing: auto;
-        font-weight: <weight>;
-        font-style: normal;
         }
     </style>
 
@@ -80,7 +78,23 @@
                 ">Book Consult</a>
             </div>
         </div>
-
+      <!-- Ending header section -->
+        <!-- Starting banner section -->
+        <div class="card bg-base-100 ">
+            <figure class="px-10 pt-10">
+              <img
+                src="image/banner.png"
+                alt="Shoes"
+                class="rounded-xl " />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="manrope-font text-2xl lg:text-6xl font-extrabold card-title">A barn house of this design has a <br> striking appearance</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
     </header>
     <!-- Ending header section -->
 </body>
