--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <!-- ending link-->
-     <!-- Font style -->
+    <!-- Font style -->
     <style>
-         .manrope-font {
-        font-family: "Manrope", serif;
-        font-optical-sizing: auto;
+        .manrope-font {
+            font-family: "Manrope", serif;
+            font-optical-sizing: auto;
         }
     </style>
 
@@ -45,56 +45,101 @@
                         <li><a>Blogs</a></li>
                         <li><a>Contact Us</a></li>
                     </ul>
-                   <!-- ml-56 lg:ml-0 -->
+                    <!-- ml-56 lg:ml-0 -->
                 </div>
-               <a class=" bg-[#ABEF5F] p-3 rounded-full ml-15 " > <svg  xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
-                <path d="M12.007 2.05932L1.0033 13.0557" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round"/>
-                <path d="M6.00728 1.18866C6.00728 1.18866 11.6409 0.715645 12.4957 1.57084C13.3503 2.42604 12.8734 8.05944 12.8734 8.05944" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg></a>
+                <a class=" bg-[#ABEF5F] p-3 rounded-full ml-15 "> <svg xmlns="http://www.w3.org/2000/svg" width="14"
+                        height="14" viewBox="0 0 14 14" fill="none">
+                        <path d="M12.007 2.05932L1.0033 13.0557" stroke="#1C1C1C" stroke-width="1.5"
+                            stroke-linecap="round" />
+                        <path
+                            d="M6.00728 1.18866C6.00728 1.18866 11.6409 0.715645 12.4957 1.57084C13.3503 2.42604 12.8734 8.05944 12.8734 8.05944"
+                            stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg></a>
                 <a class="manrope-font text-4xl font-extrabold  btn btn-ghost  ">Rinterio</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
                     <li class="manrope-font text-base font-extrabold text-[#494949]"><a>Home</a></li>
                     <li class="manrope-font text-base font-normal text-[#737373]"><a>Services</a></li>
-                    <li  class="manrope-font text-base font-normal text-[#737373]"><a>Portfolio</a></li>
-                    <li  class="manrope-font text-base font-normal text-[#737373]"><a>Blogs</a></li>
-                    <li  class="manrope-font text-base font-normal text-[#737373]"><a>Contact Us</a></li>
+                    <li class="manrope-font text-base font-normal text-[#737373]"><a>Portfolio</a></li>
+                    <li class="manrope-font text-base font-normal text-[#737373]"><a>Blogs</a></li>
+                    <li class="manrope-font text-base font-normal text-[#737373]"><a>Contact Us</a></li>
                 </ul>
             </div>
             <div class="navbar-end space-x-1">
-                <a class=""> <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
-                    <path d="M17.5075 17.5098L22.006 22.0113" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M20.0096 11.0104C20.0113 6.03982 15.9832 2.00904 11.0126 2.00739C6.04207 2.00573 2.01129 6.03383 2.00964 11.0044C2.00799 15.975 6.03609 20.0057 11.0066 20.0074C15.9772 20.009 20.008 15.981 20.0096 11.0104Z" stroke="#737373" stroke-width="1.5" stroke-linejoin="round"/>
-                  </svg></a>
-                <a class="hidden lg:inline-flex"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
-                    <path d="M8.00795 16.028L15.2711 16.0304C19.7587 16.0319 20.4422 13.2129 21.2713 9.1015C21.5104 7.91561 21.63 7.32267 21.3431 6.92751C21.0561 6.53235 20.5058 6.53216 19.4052 6.5318L6.01111 6.52734" stroke="#737373" stroke-width="1.5" stroke-linecap="round"/>
-                    <path d="M8.00795 16.0282L5.39083 3.54225C5.16855 2.65184 4.36878 2.02698 3.45105 2.02668L2.5126 2.02637" stroke="#737373" stroke-width="1.5" stroke-linecap="round"/>
-                    <path d="M8.88797 16.0283L8.47653 16.0282C7.11318 16.0277 6.00758 17.1786 6.00711 18.5987C6.00703 18.8354 6.19117 19.0274 6.4184 19.0275L17.507 19.0312" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M10.506 22.0288C11.3344 22.0291 12.0062 21.3577 12.0065 20.5293C12.0067 19.7009 11.3354 19.0291 10.507 19.0288C9.67853 19.0285 9.00673 19.6999 9.00646 20.5283C9.00618 21.3567 9.67753 22.0285 10.506 22.0288Z" stroke="#737373" stroke-width="1.5"/>
-                    <path d="M17.506 22.0313C18.3344 22.0315 19.0062 21.3602 19.0065 20.5318C19.0067 19.7033 18.3354 19.0315 17.507 19.0313C16.6785 19.031 16.0067 19.7023 16.0065 20.5308C16.0062 21.3592 16.6775 22.031 17.506 22.0313Z" stroke="#737373" stroke-width="1.5"/>
-                  </svg></a>
+                <a class=""> <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
+                        fill="none">
+                        <path d="M17.5075 17.5098L22.006 22.0113" stroke="#737373" stroke-width="1.5"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                        <path
+                            d="M20.0096 11.0104C20.0113 6.03982 15.9832 2.00904 11.0126 2.00739C6.04207 2.00573 2.01129 6.03383 2.00964 11.0044C2.00799 15.975 6.03609 20.0057 11.0066 20.0074C15.9772 20.009 20.008 15.981 20.0096 11.0104Z"
+                            stroke="#737373" stroke-width="1.5" stroke-linejoin="round" />
+                    </svg></a>
+                <a class="hidden lg:inline-flex"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+                        viewBox="0 0 25 25" fill="none">
+                        <path
+                            d="M8.00795 16.028L15.2711 16.0304C19.7587 16.0319 20.4422 13.2129 21.2713 9.1015C21.5104 7.91561 21.63 7.32267 21.3431 6.92751C21.0561 6.53235 20.5058 6.53216 19.4052 6.5318L6.01111 6.52734"
+                            stroke="#737373" stroke-width="1.5" stroke-linecap="round" />
+                        <path
+                            d="M8.00795 16.0282L5.39083 3.54225C5.16855 2.65184 4.36878 2.02698 3.45105 2.02668L2.5126 2.02637"
+                            stroke="#737373" stroke-width="1.5" stroke-linecap="round" />
+                        <path
+                            d="M8.88797 16.0283L8.47653 16.0282C7.11318 16.0277 6.00758 17.1786 6.00711 18.5987C6.00703 18.8354 6.19117 19.0274 6.4184 19.0275L17.507 19.0312"
+                            stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        <path
+                            d="M10.506 22.0288C11.3344 22.0291 12.0062 21.3577 12.0065 20.5293C12.0067 19.7009 11.3354 19.0291 10.507 19.0288C9.67853 19.0285 9.00673 19.6999 9.00646 20.5283C9.00618 21.3567 9.67753 22.0285 10.506 22.0288Z"
+                            stroke="#737373" stroke-width="1.5" />
+                        <path
+                            d="M17.506 22.0313C18.3344 22.0315 19.0062 21.3602 19.0065 20.5318C19.0067 19.7033 18.3354 19.0315 17.507 19.0313C16.6785 19.031 16.0067 19.7023 16.0065 20.5308C16.0062 21.3592 16.6775 22.031 17.506 22.0313Z"
+                            stroke="#737373" stroke-width="1.5" />
+                    </svg></a>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
+                        <path d="M8.34241 1.76806L1.00666 9.09894" stroke="white" stroke-width="1.5"
+                            stroke-linecap="round" />
+                        <path
+                            d="M4.34256 1.18779C4.34256 1.18779 8.09832 0.872443 8.66813 1.44257C9.23787 2.01271 8.91996 5.76829 8.91996 5.76829"
+                            stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                </div>
+
                 <a class="btn manrope-font text-xl font-extrabold bg-[#ABEF5F] rounded-3xl hidden lg:inline-flex
-                ">Book Consult</a>
+                "> Book Consult <div class="bg-[#000000] p-2 rounded-full"><svg xmlns="http://www.w3.org/2000/svg"
+                            width="14" height="14" viewBox="0 0 14 14" fill="none">
+                            <path d="M12.007 2.05932L1.0033 13.0557" stroke="#FFF" stroke-width="1.5"
+                                stroke-linecap="round" />
+                            <path
+                                d="M6.00728 1.18866C6.00728 1.18866 11.6409 0.715645 12.4957 1.57084C13.3503 2.42604 12.8734 8.05944 12.8734 8.05944"
+                                stroke="#FFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg></div> </a>
             </div>
         </div>
-      <!-- Ending header section -->
+        <!-- Ending header section -->
         <!-- Starting banner section -->
         <div class="card bg-base-100 ">
             <figure class="px-10 pt-10">
-              <img
-                src="image/banner.png"
-                alt="Shoes"
-                class="rounded-xl " />
+                <img src="image/banner.png" alt="Shoes" class="rounded-xl " />
             </figure>
-            <div class="card-body items-center text-center">
-              <h2 class="manrope-font text-2xl lg:text-6xl font-extrabold card-title">A barn house of this design has a <br> striking appearance</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions">
-                <button class="btn btn-primary">Buy Now</button>
-              </div>
+            <div class="card-body items-center text-center space-y-4">
+                <h2 class="manrope-font text-xl lg:text-6xl font-extrabold card-title">A barn house of this design has a
+                    <br> striking appearance</h2>
+                <div class=" lg:w-12/18">
+                    <p class="manrope-font text-base font-medium text-[#494949]">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large
+                        windows that flood the space with natural light.</p>
+                </div>
+                <div class="">
+                    <a class="btn manrope-font text-xl font-extrabold bg-[#ABEF5F] rounded-3xl"> Book Consult <div class="bg-[#000000] p-2 rounded-full"><svg xmlns="http://www.w3.org/2000/svg"
+                            width="14" height="14" viewBox="0 0 14 14" fill="none">
+                            <path d="M12.007 2.05932L1.0033 13.0557" stroke="#FFF" stroke-width="1.5"
+                                stroke-linecap="round" />
+                            <path
+                                d="M6.00728 1.18866C6.00728 1.18866 11.6409 0.715645 12.4957 1.57084C13.3503 2.42604 12.8734 8.05944 12.8734 8.05944"
+                                stroke="#FFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg></div> </a>
+                </div>
             </div>
-          </div>
+        </div>
     </header>
     <!-- Ending header section -->
 </body>
