--- a/index.html
+++ b/index.html
@@ -251,6 +251,56 @@
         </section>
         <!-- 2st section ending -->
 
+        <!-- work process section -->
+
+        
+ <section class="mb-48 pl-3  lg:pl-32 lg:pr-32">
+    <div class="text-center space-y-6 mb-8">
+        <button  class="btn manrope-font rounded-full text-base font-bold"><svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none">
+            <path d="M16.571 9.0853H1.01467" stroke="#494949" stroke-width="1.5" stroke-linecap="round"/>
+            <path d="M12.9425 4.22875C12.9425 4.22875 17.2618 7.87644 17.2619 9.08553C17.2618 10.2946 12.9425 13.9422 12.9425 13.9422" stroke="#494949" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>How we works
+          </button>
+          <h2 class="manrope-font text-4xl font-bold">Our Works Process</h2>
+          <p class="manrope-font text-base font-medium
+          ">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
+    </div>
+    <!-- card contain -->
+          <div class="flex flex-col lg:flex-row gap-6 ">
+            <!-- 1st card contain -->
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <div class="card-body">
+                <img class="w-2/12" src="image/concept.png" alt="">
+              <h2 class="manrope-font text-xl font-extrabold card-title">Concept</h2>
+              <p class="manrope-font text-base font-medium ">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+          </div>
+          <!-- 2st card contain -->
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <div class="card-body">
+                <img class="w-2/12" src="image/flow-chart.png" alt="">
+              <h2 class="manrope-font text-xl font-extrabold card-title">Design Process</h2>
+              <p class="manrope-font text-base font-medium ">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+          </div>
+              <!-- 3st card contain -->
+              <div class="card bg-base-100 w-96 shadow-xl">
+                <div class="card-body">
+                    <img class="w-2/12" src="image/vision.png" alt="">
+                  <h2 class="manrope-font text-xl font-extrabold card-title">Supervision</h2>
+                  <p class="manrope-font text-base font-medium ">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+                  <!-- 1st card contain -->
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <div class="card-body">
+                <img class="w-2/12" src="image/budget-planning.png" alt="">
+              <h2 class="manrope-font text-xl font-extrabold card-title">Budget Planning</h2>
+              <p class="manrope-font text-base font-medium ">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+          </div>
+          </div>
+ </section>
 
 
     </main>
