--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <!-- work process section -->
 
 
-        <section class="mb-12 pl-3  lg:pl-32 lg:pr-32">
+        <section class="mb-12 pl-3  lg:px-32">
             <div class="text-center space-y-6 mb-8">
                 <button class="btn manrope-font rounded-full text-base font-bold"><svg
                         xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none">
@@ -395,7 +395,7 @@
               <!-- 5th photo section -->
               <div class="flex gap-6">
                   <!-- Extra -->
-                  <div class="border border-[#E9E9E9] flex p-6 items-center rounded-2xl inline  lg:hidden ">
+                  <div class="border border-[#E9E9E9] p-6 items-center rounded-2xl inline  lg:hidden ">
                     <div class="mr-4">
                       <img src="image/img2.png" alt="Image 2">
                     </div>
@@ -407,6 +407,160 @@
                   </div>
                   <!-- extra -->
              </div>
+          </section>
+
+<!-- Read section -->
+          <section class="lg:px-32 mb-24">
+            <div class="text-center space-y-6 mb-8">
+                <button class="btn manrope-font rounded-full text-base font-bold"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none">
+                        <path d="M16.571 9.0853H1.01467" stroke="#494949" stroke-width="1.5" stroke-linecap="round" />
+                        <path
+                            d="M12.9425 4.22875C12.9425 4.22875 17.2618 7.87644 17.2619 9.08553C17.2618 10.2946 12.9425 13.9422 12.9425 13.9422"
+                            stroke="#494949" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>Rinterio News
+                </button>
+                <h2 class="manrope-font text-4xl font-bold">Read Our Articles and News</h2>
+                <p class="manrope-font text-base font-medium
+          ">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered
+                    wood, sleek metal accents.</p>
+            </div>
+<div class="flex flex-col lg:flex-row gap-6">
+    <!-- card 1 section -->
+    <div class="card bg-base-100 w-96 shadow-xl">
+        <figure class="px-10 pt-10">
+          <img
+            src="image/article3.png"
+            alt="Shoes"
+            class="rounded-xl" />
+        </figure>
+        <div class="card-body">
+              <div class="flex gap-6">
+                  <div>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                          <path d="M18 2.46426V4.46426M6 2.46426V4.46426" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M11.9955 13.4643H12.0045M11.9955 17.4643H12.0045M15.991 13.4643H16M8 13.4643H8.00897M8 17.4643H8.00897" stroke="#737373" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M3.5 8.46426H20.5" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M2.5 12.7075C2.5 8.3502 2.5 6.17154 3.75212 4.8179C5.00424 3.46426 7.01949 3.46426 11.05 3.46426H12.95C16.9805 3.46426 18.9958 3.46426 20.2479 4.8179C21.5 6.17154 21.5 8.3502 21.5 12.7075V13.2211C21.5 17.5784 21.5 19.757 20.2479 21.1107C18.9958 22.4643 16.9805 22.4643 12.95 22.4643H11.05C7.01949 22.4643 5.00424 22.4643 3.75212 21.1107C2.5 19.757 2.5 17.5784 2.5 13.2211V12.7075Z" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M3 8.46426H21" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg> <h2>July14, 2024</h2>
+                  </div>
+                 <div>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                      <path d="M12.0063 22.4643C17.5292 22.4643 22.0063 17.9871 22.0063 12.4643C22.0063 6.94142 17.5292 2.46426 12.0063 2.46426C6.4835 2.46426 2.00635 6.94142 2.00635 12.4643C2.00635 17.9871 6.4835 22.4643 12.0063 22.4643Z" stroke="#737373" stroke-width="1.5"/>
+                      <path d="M7.50635 17.4643C9.83805 15.0221 14.1495 14.9071 16.5063 17.4643M14.5014 9.96426C14.5014 11.345 13.3805 12.4643 11.9978 12.4643C10.6152 12.4643 9.49432 11.345 9.49432 9.96426C9.49432 8.58355 10.6152 7.46426 11.9978 7.46426C13.3805 7.46426 14.5014 8.58355 14.5014 9.96426Z" stroke="#737373" stroke-width="1.5" stroke-linecap="round"/>
+                    </svg> <h2>By Admin</h2>
+                 </div>
+              </div>
+                <h2 class="font-manrope text-2xl font-extrabold">Commercial</h2>
+                <p class="font-manrope text-base font-medium">
+                  The barn house captivates with its blend of rustic charm and modern design.
+                </p>
+
+               <div class="flex items-center gap-3">
+                  <a class=" bg-[#ABEF5F] p-3 rounded-full"> <svg xmlns="http://www.w3.org/2000/svg" width="14"
+                      height="14" viewBox="0 0 14 14" fill="none">
+                      <path d="M12.007 2.05932L1.0033 13.0557" stroke="#1C1C1C" stroke-width="1.5"
+                          stroke-linecap="round" />
+                      <path
+                          d="M6.00728 1.18866C6.00728 1.18866 11.6409 0.715645 12.4957 1.57084C13.3503 2.42604 12.8734 8.05944 12.8734 8.05944"
+                          stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg></a>
+                    <h2 class="font-manrope text-lg font-bold"> View Details </h2>
+               </div>
+        </div>
+      </div>
+
+      <!-- card 1 section -->
+      <div class="card bg-base-100 w-96 shadow-xl">
+        <figure class="px-10 pt-10">
+          <img
+            src="image/article1.png"
+            alt="Shoes"
+            class="rounded-xl" />
+        </figure>
+        <div class="card-body">
+              <div class="flex gap-6">
+                  <div>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                          <path d="M18 2.46426V4.46426M6 2.46426V4.46426" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M11.9955 13.4643H12.0045M11.9955 17.4643H12.0045M15.991 13.4643H16M8 13.4643H8.00897M8 17.4643H8.00897" stroke="#737373" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M3.5 8.46426H20.5" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M2.5 12.7075C2.5 8.3502 2.5 6.17154 3.75212 4.8179C5.00424 3.46426 7.01949 3.46426 11.05 3.46426H12.95C16.9805 3.46426 18.9958 3.46426 20.2479 4.8179C21.5 6.17154 21.5 8.3502 21.5 12.7075V13.2211C21.5 17.5784 21.5 19.757 20.2479 21.1107C18.9958 22.4643 16.9805 22.4643 12.95 22.4643H11.05C7.01949 22.4643 5.00424 22.4643 3.75212 21.1107C2.5 19.757 2.5 17.5784 2.5 13.2211V12.7075Z" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M3 8.46426H21" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg> <h2>July14, 2024</h2>
+                  </div>
+                 <div>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                      <path d="M12.0063 22.4643C17.5292 22.4643 22.0063 17.9871 22.0063 12.4643C22.0063 6.94142 17.5292 2.46426 12.0063 2.46426C6.4835 2.46426 2.00635 6.94142 2.00635 12.4643C2.00635 17.9871 6.4835 22.4643 12.0063 22.4643Z" stroke="#737373" stroke-width="1.5"/>
+                      <path d="M7.50635 17.4643C9.83805 15.0221 14.1495 14.9071 16.5063 17.4643M14.5014 9.96426C14.5014 11.345 13.3805 12.4643 11.9978 12.4643C10.6152 12.4643 9.49432 11.345 9.49432 9.96426C9.49432 8.58355 10.6152 7.46426 11.9978 7.46426C13.3805 7.46426 14.5014 8.58355 14.5014 9.96426Z" stroke="#737373" stroke-width="1.5" stroke-linecap="round"/>
+                    </svg> <h2>By Admin</h2>
+                 </div>
+              </div>
+                <h2 class="font-manrope text-2xl font-extrabold">Commercial</h2>
+                <p class="font-manrope text-base font-medium">
+                  The barn house captivates with its blend of rustic charm and modern design.
+                </p>
+
+               <div class="flex items-center gap-3">
+                  <a class=" bg-[#ABEF5F] p-3 rounded-full"> <svg xmlns="http://www.w3.org/2000/svg" width="14"
+                      height="14" viewBox="0 0 14 14" fill="none">
+                      <path d="M12.007 2.05932L1.0033 13.0557" stroke="#1C1C1C" stroke-width="1.5"
+                          stroke-linecap="round" />
+                      <path
+                          d="M6.00728 1.18866C6.00728 1.18866 11.6409 0.715645 12.4957 1.57084C13.3503 2.42604 12.8734 8.05944 12.8734 8.05944"
+                          stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg></a>
+                    <h2 class="font-manrope text-lg font-bold"> View Details </h2>
+               </div>
+        </div>
+      </div>
+
+      <!-- card 1 section -->
+      <div class="card bg-base-100 w-96 shadow-xl">
+        <figure class="px-10 pt-10">
+          <img
+            src="image/article2.png"
+            alt="Shoes"
+            class="rounded-xl" />
+        </figure>
+        <div class="card-body">
+              <div class="flex gap-6">
+                  <div>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                          <path d="M18 2.46426V4.46426M6 2.46426V4.46426" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M11.9955 13.4643H12.0045M11.9955 17.4643H12.0045M15.991 13.4643H16M8 13.4643H8.00897M8 17.4643H8.00897" stroke="#737373" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M3.5 8.46426H20.5" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M2.5 12.7075C2.5 8.3502 2.5 6.17154 3.75212 4.8179C5.00424 3.46426 7.01949 3.46426 11.05 3.46426H12.95C16.9805 3.46426 18.9958 3.46426 20.2479 4.8179C21.5 6.17154 21.5 8.3502 21.5 12.7075V13.2211C21.5 17.5784 21.5 19.757 20.2479 21.1107C18.9958 22.4643 16.9805 22.4643 12.95 22.4643H11.05C7.01949 22.4643 5.00424 22.4643 3.75212 21.1107C2.5 19.757 2.5 17.5784 2.5 13.2211V12.7075Z" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M3 8.46426H21" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg> <h2>July14, 2024</h2>
+                  </div>
+                 <div>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                      <path d="M12.0063 22.4643C17.5292 22.4643 22.0063 17.9871 22.0063 12.4643C22.0063 6.94142 17.5292 2.46426 12.0063 2.46426C6.4835 2.46426 2.00635 6.94142 2.00635 12.4643C2.00635 17.9871 6.4835 22.4643 12.0063 22.4643Z" stroke="#737373" stroke-width="1.5"/>
+                      <path d="M7.50635 17.4643C9.83805 15.0221 14.1495 14.9071 16.5063 17.4643M14.5014 9.96426C14.5014 11.345 13.3805 12.4643 11.9978 12.4643C10.6152 12.4643 9.49432 11.345 9.49432 9.96426C9.49432 8.58355 10.6152 7.46426 11.9978 7.46426C13.3805 7.46426 14.5014 8.58355 14.5014 9.96426Z" stroke="#737373" stroke-width="1.5" stroke-linecap="round"/>
+                    </svg> <h2>By Admin</h2>
+                 </div>
+              </div>
+                <h2 class="font-manrope text-2xl font-extrabold">Commercial</h2>
+                <p class="font-manrope text-base font-medium">
+                  The barn house captivates with its blend of rustic charm and modern design.
+                </p>
+
+               <div class="flex items-center gap-3">
+                  <a class=" bg-[#ABEF5F] p-3 rounded-full"> <svg xmlns="http://www.w3.org/2000/svg" width="14"
+                      height="14" viewBox="0 0 14 14" fill="none">
+                      <path d="M12.007 2.05932L1.0033 13.0557" stroke="#1C1C1C" stroke-width="1.5"
+                          stroke-linecap="round" />
+                      <path
+                          d="M6.00728 1.18866C6.00728 1.18866 11.6409 0.715645 12.4957 1.57084C13.3503 2.42604 12.8734 8.05944 12.8734 8.05944"
+                          stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg></a>
+                    <h2 class="font-manrope text-lg font-bold"> View Details </h2>
+               </div>
+        </div>
+      </div>
+</div>
           </section>
     </main>
 </body>
