--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
             font-optical-sizing: auto;
         }
     </style>
-
 </head>
 
 <body>
     <!-- Starting header header -->
-    <header>
+    <header class="">
         <div class="navbar bg-base-100 lg:pl-32 lg:pr-32 mt-9 items-center">
             <div class="navbar-start ">
                 <div class="dropdown ">
@@ -148,10 +147,10 @@
 
 
     <!-- starting main -->
-    <main>
+    <main class="pl-3 lg:px-32">
         <!-- 1st section starting -->
-        <section class="mb-24">
-            <div class="card lg:card-side bg-base-100 lg:pl-32 lg:pr-32 mt-9">
+        <section class="mb-8 lg:mb-24">
+            <div class="card lg:card-side bg-base-100  lg:mt-9">
 
                 <div class="card-body space-y-4">
                     <div class="card-actions ">
@@ -183,7 +182,7 @@
             </div>
         </section>
         <!-- 1st section ending -->
-        <section class="mb-24">
+        <section class="mb-8 lg:mb-24">
             <div class=" card bg-base-100  ml-4 mr-4 lg:ml-28 lg:mr-28 shadow-xl">
                 <!-- 1st card  -->
                 <div class="grid grid-cols-2 gap-10 lg:flex lg:flex-row">
@@ -261,7 +260,7 @@
         <!-- work process section -->
 
 
-        <section class="mb-12 pl-3  lg:px-32">
+        <section class=" mb-8 lg:mb-12 ">
             <div class="text-center space-y-6 mb-8">
                 <button class="btn manrope-font rounded-full text-base font-bold"><svg
                         xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none">
@@ -332,7 +331,7 @@
         </section>
         <!-- photo section  -->
 
-        <section class="lg:px-32 mb-24">
+        <section class="mb-8 lg:mb-24">
             <div class="flex flex-col lg:flex-row gap-6">
                 <!-- 1st photo section -->
                 <div class="border border-[#E9E9E9] flex p-6 items-center rounded-2xl">
@@ -410,7 +409,7 @@
         </section>
 
         <!-- Read section -->
-        <section class="pl-3  lg:px-32 mb-24">
+        <section class="mb-8 lg:mb-24">
             <div class="text-center space-y-6 mb-8">
                 <button class="btn manrope-font rounded-full text-base font-bold"><svg
                         xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none">
@@ -610,7 +609,7 @@
 
         <!-- Read section end-->
         <!-- Let’s Connect section -->
-        <section class=" pl-3 lg:px-32 mb-24">
+        <section class=" mb-8 lg:mb-24">
             <div class="text-center space-y-6 mb-8">
                 <button class="btn manrope-font rounded-full text-base font-bold"><svg
                         xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none">
@@ -629,7 +628,7 @@
             <div class="lg:mx-43">
                 <div class="flex flex-col lg:flex-row justify-between">
                     <div class="mb-4">
-                        <div class=" lgw-md">
+                        <div class=" lg:w-md">
                             <label class="input input-bordered flex items-center gap-2 rounded-3xl">
                                 <input type="text" class="grow" placeholder="First Name*" />
                             </label>
@@ -649,17 +648,13 @@
                             </label>
                         </div>
 
-                        <div class="mt-4 lg:w-md">
+                        <div class="mt-4 lg:w-[473]">
                             <label class="input input-bordered flex items-center gap-2 rounded-3xl">
                                 <input type="text" class="grow" placeholder="Email Number*" />
                             </label>
                         </div>
-
                     </div>
-
-
                 </div>
-
                 <div class="mt-4  ">
                     <label class="input input-bordered rounded-3xl flex items-center gap-2 ">
                         <input type="text" class="grow" placeholder="Email" />
@@ -668,17 +663,14 @@
                 <div class="mt-4 ">
                     <button class="btn btn-block bg-[#ABEF5F] rounded-3xl">block</button>
                 </div>
-
             </div>
-
         </section>
     </main>
 
     <!-- footer section -->
 
-    <footer class="footer footer-center bg-base-200 text-base-content rounded lg:p-10">
+    <footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded p-10 text-[#E9E9E9] ">
         <div class="text-center space-y-2 ">
-           
             <div class="">
                 <a class="btn manrope-font text-2xl font-extrabold  rounded-3xl"> Rinterio <div
                         class="bg-[#ABEF5F]  p-2 rounded-full"><svg xmlns="http://www.w3.org/2000/svg" width="14"
@@ -695,16 +687,16 @@
                 wood, sleek metal accents.</p>
         </div>
         <nav class="grid grid-flow-col gap-3 lg:gap-28">
-          <a class="link link-hover">Home</a>
-          <a class="link link-hover">Services</a>
-          <a class="link link-hover">Portfolio</a>
-          <a class="link link-hover">Blogs</a>
-          <a class="link link-hover">Contact Us</a>
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">Services</a>
+            <a class="link link-hover">Portfolio</a>
+            <a class="link link-hover">Blogs</a>
+            <a class="link link-hover">Contact Us</a>
         </nav>
-        <div class="">
+        <div class="pb-10">
             <a class="btn manrope-font text-xl font-extrabold bg-[#ABEF5F] rounded-3xl"> Book Consult <div
-                    class="bg-[#000000] p-2 rounded-full"><svg xmlns="http://www.w3.org/2000/svg" width="14"
-                        height="14" viewBox="0 0 14 14" fill="none">
+                    class="bg-[#000000] p-2 rounded-full"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
+                        viewBox="0 0 14 14" fill="none">
                         <path d="M12.007 2.05932L1.0033 13.0557" stroke="#FFF" stroke-width="1.5"
                             stroke-linecap="round" />
                         <path
@@ -712,7 +704,7 @@
                             stroke="#FFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                     </svg></div> </a>
         </div>
-      </footer>
+    </footer>
 </body>
 
 </html>
