--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                     </label>
                 </div>
                 <div class="mt-4 ">
-                    <button class="btn btn-block bg-[#ABEF5F] rounded-3xl">block</button>
+                    <button class="btn btn-block bg-[#ABEF5F] rounded-3xl">Send Mail</button>
                 </div>
             </div>
         </section>
